--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
 
 <h1 id="hi">Hi!</h1>
 
-<p>My name is Ezequiel Scott, and I am currently working as a Research Fellow at University of Tartu, Estonia. My research interests are mainly related to agile software development and software analytics. I have been also making research that lies at the intersection between software engineering and education, mainly focusing on adaptive environments for aiding students in their learning process. I have a strong interest in human factors and psychological issues involved in software development.</p>
+<p>My name is Ezequiel Scott, and I am currently working as a Research Fellow at <img src="https://www.ut.ee/en" alt="University of Tartu" />, Estonia. My research interests are mainly related to agile software development and software analytics. I have been also making research that lies at the intersection between software engineering and education, mainly focusing on adaptive environments for aiding students in their learning process. I have a strong interest in human factors and psychological issues involved in software development.</p>
 
-<p>I graduated from Universidad Nacional del Centro de la Provincia de Buenos Aires (UNICEN) in Systems Engineering in Tandil, Argentina, 2012. In the same year, I obtained a scholarship from CONICET to complete my doctoral studies. Then, I obtained the PhD degree in Computer Science at UNICEN in 2016.
-In 2017, I moved to Estonia for new challenges. Since May 2017, I have been part of the Institute of Computer Science at University of Tartu. My research has been published in international conferences and journals including Journal of Systems and Software, Computers in Human Behavior and IEEE Transactions on Learning Technologies.</p>
+<p>I graduated from <img src="https://www.unicen.edu.ar/" alt="Universidad Nacional del Centro de la Provincia de Buenos Aires (UNICEN)" /> in Systems Engineering in Tandil, Argentina, 2012. In the same year, I obtained a scholarship from the <a href="http://www.conicet.gov.ar/?lan=en">National Scientific and Technical Research Council (CONICET)</a> to complete my doctoral studies. Then, I obtained the PhD degree in Computer Science at UNICEN in 2016.
+In 2017, I moved to Estonia for new challenges. Since May 2017, I have been part of the <img src="https://www.cs.ut.ee/en" alt="Institute of Computer Science" /> at University of Tartu. My research has been published in international conferences and journals including the <em>Journal of Systems and Software</em>, <em>Computers in Human Behavior</em> and <em>IEEE Transactions on Learning Technologies</em>.</p>
 
             </div>
             
